--- a/1.0_0/index.html
+++ b/1.0_0/index.html
@@ -26,7 +26,7 @@
     font-size: 14px;
     font-family: monospace;
     background: rgba(33, 33, 33, 1);
-    white-space: pre;
+    white-space: pre-wrap;
     tab-size: 4;
   }
   a {
