--- a/1.0_0/index.html
+++ b/1.0_0/index.html
@@ -28,6 +28,7 @@
     background: rgba(33, 33, 33, 1);
     white-space: pre; /* was pre-wrap; but urls wrapped weird */
     tab-size: 4;
+    text-wrap: wrap;
   }
   a {
     color: #f0f0f0;
